fixed alignment for select button

--- a/Website/frontend/assets/css/_sass/partials/_enrollment.scss
+++ b/Website/frontend/assets/css/_sass/partials/_enrollment.scss
@@ -1035,6 +1035,9 @@
             white-space: nowrap;
             background-image: none;
             margin-right: 0 !important;
+            width: auto;
+            padding: 10px;
+            min-width: 130px;
             &.secondary {
                 color: #5cab0d;
                 border: none;
@@ -1114,7 +1117,7 @@
         }
         .select-plan {
             position: relative;
-            width: 130px;
+            min-width: 130px;
             padding: 15px;
             border-right: none;
             vertical-align: middle;
